[package]
name = "rust_web_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
gloo = "0.10.0"
serde = "1.0.188"
serde_json = "1.0.107"
stylist = { version = "0.13.0", features = ["yew"]}